retirada as pastas

--- a/contato.html
+++ b/contato.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="imagens/favicon/opus.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="opus.ico" type="image/x-icon">
     <title>OPUS</title>
-    <link rel="stylesheet" href="estilos/contato.css">
+    <link rel="stylesheet" href="contato.css">
 </head>
 <body>
     <nav>
@@ -16,9 +16,9 @@
         <a href="contato.html">Contato</a>
     </nav>
     <div class="logo">
-        <img src="imagens/LogoNovoTransparente.png" alt="logo" width="100%">
+        <img src="LogoNovoTransparente.png" alt="logo" width="100%">
     </div>
-    <header style="background-image: url(imagens/pexels-ksenia-chernaya-5691590.jpg);">
+    <header style="background-image: url(pexels-ksenia-chernaya-5691590.jpg);">
         <div class="apresentacao">
             <div class="text">
                 <h1>OPUS</h1>
@@ -28,11 +28,11 @@
     </header>
     <main>
         <div class="icone">
-            <img src="imagens/email-2-icon.png" alt="Automação">
+            <img src="email-2-icon.png" alt="Automação">
             <p><a href="#">Opus</a></p>
         </div>
         <div class="icone">
-            <img src="imagens/Whatsapp-icon.png" alt="Automação">
+            <img src="Whatsapp-icon.png" alt="Automação">
             <p><a href="#">(15) XXXXXXXX</a></p>
         </div>
     </main>
