--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="imagens/favicon/opus.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="opus.ico" type="image/x-icon">
     <title>OPUS</title>
-    <link rel="stylesheet" href="estilos/index.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <nav>
@@ -16,9 +16,9 @@
         <a href="contato.html">Contato</a>
     </nav>
     <div class="logo">
-        <img src="imagens/LogoNovoTransparente.png" alt="logo" width="100%">
+        <img src="LogoNovoTransparente.png" alt="logo" width="100%">
     </div>
-    <header style="background-image: url(imagens/pexels-andreea-ch-1166643\ \(1\).jpg);">
+    <header style="background-image: url(pexels-andreea-ch-1166643\ \(1\).jpg);">
         <div class="apresentacao">
             <div class="text">
                 <h1>OPUS</h1>
@@ -28,20 +28,20 @@
     </header>
     <main>
         <div class="icone">
-            <img src="imagens/1.png" alt="Automação">
+            <img src="1.png" alt="Automação">
             <p>Automação</p>
         </div>
         <div class="icone">
-            <img src="imagens/2.png" alt="Automação">
+            <img src="2.png" alt="Automação">
             <p>Instalações</p>
         </div><div class="icone">
-            <img src="imagens/3.png" alt="Automação">
+            <img src="3.png" alt="Automação">
             <p>Elétrica</p>
         </div><div class="icone">
-            <img src="imagens/4.png" alt="Automação">
+            <img src="4.png" alt="Automação">
             <p>Montagens</p>
         </div><div class="icone">
-            <img src="imagens/5.png" alt="Automação">
+            <img src="5.png" alt="Automação">
             <p>TI</p>
     </main>
     <footer>
