--- a/quemsomos.html
+++ b/quemsomos.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="imagens/favicon/opus.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="opus.ico" type="image/x-icon">
     <title>OPUS</title>
-    <link rel="stylesheet" href="estilos/quemsomos.css">
+    <link rel="stylesheet" href="quemsomos.css">
 </head>
 <body>
     <nav>
@@ -16,9 +16,9 @@
         <a href="contato.html">Contato</a>
     </nav>
     <div class="logo">
-        <img src="imagens/LogoNovoTransparente.png" alt="logo" width="100%">
+        <img src="LogoNovoTransparente.png" alt="logo" width="100%">
     </div>
-    <header style="background-image: url(imagens/pexels-los-muertos-crew-8853535.jpg);">
+    <header style="background-image: url(pexels-los-muertos-crew-8853535.jpg);">
         <div class="apresentacao">
             <div class="text">
                 <h1>OPUS</h1>
