--- a/servicos.html
+++ b/servicos.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="imagens/favicon/opus.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="opus.ico" type="image/x-icon">
     <title>OPUS</title>
-    <link rel="stylesheet" href="estilos/servicos.css">
+    <link rel="stylesheet" href="servicos.css">
 </head>
 <body>
     <nav>
@@ -16,9 +16,9 @@
         <a href="contato.html">Contato</a>
     </nav>
     <div class="logo">
-        <img src="imagens/LogoNovoTransparente.png" alt="logo" width="100%">
+        <img src="LogoNovoTransparente.png" alt="logo" width="100%">
     </div>
-    <header style="background-image: url(imagens/pexels-cottonbro-4480453.jpg);">
+    <header style="background-image: url(pexels-cottonbro-4480453.jpg);">
         <div class="apresentacao">
             <div class="text">
                 <h1>OPUS</h1>
@@ -33,7 +33,7 @@
     </section>
     <main>
         <div class="icone">
-            <img src="imagens/1.png" alt="Automação">
+            <img src="1.png" alt="Automação">
             <h3>Automação</h3>
             <ul>
                 <li>Processos e serviços</li>
@@ -42,7 +42,7 @@
             </ul>
         </div>
         <div class="icone">
-            <img src="imagens/2.png" alt="Automação">
+            <img src="2.png" alt="Automação">
             <h3>Instalações</h3>
             <ul>
                 <li>Câmeras</li>
@@ -51,7 +51,7 @@
                 <li>Smart Interruptor</li>
             </ul>
         </div><div class="icone">
-            <img src="imagens/3.png" alt="Automação">
+            <img src="3.png" alt="Automação">
             <h3>Elétrica</h3>
             <ul>
                 <li>Rede Elétrica</li>
@@ -59,14 +59,14 @@
                 <li>Aterramento</li>
             </ul>
         </div><div class="icone">
-            <img src="imagens/4.png" alt="Automação">
+            <img src="4.png" alt="Automação">
             <h3>Montagens</h3>
             <ul>
                 <li>Paineis elétricos</li>
                 <li>Sistemas inteligentes</li>
             </ul>
         </div><div class="icone">
-            <img src="imagens/5.png" alt="Automação">
+            <img src="5.png" alt="Automação">
             <h3>TI</h3>
                 <ul>
                     <li>Configuração Modem</li>
