--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="quemsomos.html">Quem somos</a>
-        <a href="servicos.html">Serviços</a>
-        <a href="contato.html">Contato</a>
+        <div><a href="index.html">Home</a></div>
+        <div><a href="quemsomos.html">Quem somos</a></div>
+        <div><a href="servicos.html">Serviços</a></div>
+        <div><a href="contato.html">Contato</a></div>
     </nav>
     <div class="logo">
         <img src="LogoNovoTransparente.png" alt="logo" width="100%">
